# me-llm-tuning

./: .env.example  CLAUDE.md  README.md  pyproject.toml  requirements.txt  setup.sh  training_data.json
import/done/: BERT.md  Claude.md  GPT-4.md  Gemini.md  Grok.md  Llama-2.md  Mistral.md  PaLM-2.md
src/: __init__.py  config.py  file_processor.py  main.py  ollama_client.py
